--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> --> 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     
 
 </head>
@@ -58,22 +59,23 @@
                   <div class="carousel-item active">
                     <img src="image/k4.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>welcome to god'own country</h5>
+                        <h5 class="animate__animated animate__bounceInRight animate__delay-1s">welcome to god's own country</h5>
+                      <!-- <h5>welcome to god'own country</h5> -->
                       <p></p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="image/k2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Experience Kerala</h5>
-                      <p>Famously known as 'God's Own Country', Kerala is a state located on the Malabar coast of Southern India. Home to a vast network of brackish lagoons called backwaters, ayurvedic massages, wildlife sanctuaries, sprawling tea gardens, hill-stations, palm tree-lined beaches and colourful dance forms, Kerala has everything on offer to take your pick from!</p>
+                      <h5 class="animate__animated animate__bounceInLeft animate__delay-1s">Experience Kerala</h5>
+                      <p class="animate__animated animate__fadeInRight animate__delay-1s">Famously known as 'God's Own Country', Kerala is a state located on the Malabar coast of Southern India. Home to a vast network of brackish lagoons called backwaters, ayurvedic massages, wildlife sanctuaries, sprawling tea gardens, hill-stations, palm tree-lined beaches and colourful dance forms, Kerala has everything on offer to take your pick from!</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="image/k5.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>perfect holiday spot</h5>
-                      <p>Hill station and long beaches within kilometers of each other. Rolling backwaters and amazing amalgamation of cuisine.</p>
+                      <h5 class="animate__animated animate__slideInDown animate__delay-1s">perfect holiday spot</h5>
+                      <p class="animate__animated animate__fadeInLeft animate__delay-1s">Hill station and long beaches within kilometers of each other. Rolling backwaters and amazing amalgamation of cuisine.</p>
                     </div>
                   </div>
                 </div>
