--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <a class="nav-link active" href="signup.html">Signup</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="district.html">Districts</a>
+                  <a class="nav-link disabled" href="district.html">Districts</a>
                 </li> 
                 <!-- <li class="nav-item">
                   <a class="nav-link disabled">Districts</a>
