--- a/kottayam.html
+++ b/kottayam.html
@@ -31,10 +31,10 @@
             <a class="navbar-brand" href="index.html">Home</a>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="login.html" >Signin</a>
+                <a class="nav-link disabled" aria-current="page" href="login.html" >Signin</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="signup.html" >Signup</a>
+                <a class="nav-link disabled" href="signup.html" >Signup</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="district.html" >Districts</a>
