--- a/kasargodu.html
+++ b/kasargodu.html
@@ -28,16 +28,16 @@
             <span class="navbar-toggler-icon"></span>
           </button> 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="index.html">Home</a>
+           
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link disabled" aria-current="page" href="login.html">Signin</a>
+               
+              </li>
+               <li class="nav-item">
+                <a class="nav-link active"  href="district.html">district</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="signup.html">Signup</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="district.html">Districts</a>
+                <a class="nav-link active"  href="index.html">signout</a>
               </li> 
               <!-- <li class="nav-item">
                 <a class="nav-link disabled">Districts</a>
